Test: Approx 60% unit test coverage for existing Angular components

--- a/frontend/src/app/modal-dialog/modal-dialog.component.html
+++ b/frontend/src/app/modal-dialog/modal-dialog.component.html
@@ -2,7 +2,7 @@
     <i *ngIf="triggerIcon" [class]="triggerIcon"></i>
     {{ triggerLabel }}
 </button>
-<div *ngIf="inDOM" class="modal-dialog">
+<div *ngIf="inDOM" class="modal-dialog" role="dialog" aria-label="Modal dialog">
     <div class="modal-dialog__backdrop" [@dialogOverlay]="show ? 'open' : 'closed'">
     </div>
     <div class="modal-dialog__content" [@dialogContent]="show ? 'open' : 'closed'">
