--- a/frontend/src/app/button/button.component.html
+++ b/frontend/src/app/button/button.component.html
@@ -1,3 +1,3 @@
-<button [class]="classNames" [class.active]="active">
+<button [class]="classNames" [class.active]="active" (click)="onClick()">
     {{ label }}
 </button>
