Improve clarity of endpoints; complete Swagger documentation

--- a/server/src/docs/_global.scss
+++ b/server/src/docs/_global.scss
@@ -26,7 +26,7 @@
 	// Code blocks
 	.highlight-code {
 		code * {
-			font-family: monospace;
+			font-family: 'Fira Code', monospace;
 		}
 
 		pre {
